cabal-version:       2.0

name:                kinprog
version:             0.1.0.0
synopsis:            Kinesis Advantage2 Programming Tool
description:         Kinesis Advantage2 Programming Tool
homepage:            https://github.com/TravisWhitaker/kinprog
bug-reports:         https://github.com/TravisWhitaker/kinprog/issues
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2020
category:            Text
build-type:          Simple
extra-source-files:  README.md

executable kinprog
  main-is:             Main.hs
  other-modules:       Kinesis.Action
                       Kinesis.Drawing
                       Kinesis.Layout
                       Kinesis.Location
  -- other-extensions:
  build-depends:       base ^>=4.14.1.0
                     , brick
                     , attoparsec
                     , bytestring
                     , containers
                     , vty
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
